// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidePanel > should match the snapshot 1`] = `
.circuit-0 {
  height: 100%;
}

.circuit-1 {
  height: 100%;
  outline: none;
  background-color: var(--cui-bg-normal);
  box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 0;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  width: 100%;
  height: 100%;
}

@media (min-width: 768px) {
  .circuit-2 {
    padding-left: 0;
  }
}

.circuit-3 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-3 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

.circuit-6 {
  width: 100%;
  max-width: 480px;
  padding: 0 16px;
}

@media (min-width: 768px) {
  .circuit-6 {
    padding: 0 24px;
  }
}

<body
  class="ReactModal__SidePanel__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  >
    <div
      class="ReactModal__Overlay circuit-0"
    >
      <div
        aria-labelledby=":r0:"
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <h2
              class="_base_20bab7 _four_20bab7 circuit-4"
              id=":r0:"
            >
              Side panel title
            </h2>
            <button
              class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-5"
              title="Close"
              type="button"
            >
              <span
                class="_base_2b3edd _byte_2b3edd _spinner_892426"
              >
                <span
                  class="_hide-visually_73b4bb"
                />
              </span>
              <span
                class="_content_892426"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_hide-visually_73b4bb"
                >
                  Close
                </span>
              </span>
            </button>
          </div>
          <div
            class="circuit-6"
          >
            <p
              data-testid="children"
            >
              Side panel content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePanel > when the panel is on mobile resolution > should match the snapshot 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  -webkit-transition: background-color 240ms ease-in-out;
  transition: background-color 240ms ease-in-out;
  background-color: rgba(0, 0, 0, 0);
}

.circuit-1 {
  height: 100%;
  outline: none;
  background-color: var(--cui-bg-normal);
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 240ms ease-in-out;
  transition: transform 240ms ease-in-out;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 0;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  width: 100%;
  height: 100%;
}

@media (min-width: 768px) {
  .circuit-2 {
    padding-left: 0;
  }
}

.circuit-3 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-3 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

.circuit-6 {
  width: 100%;
  max-width: 480px;
  padding: 0 16px;
}

@media (min-width: 768px) {
  .circuit-6 {
    padding: 0 24px;
  }
}

<body
  class="ReactModal__SidePanel__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-labelledby=":rd:"
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <h2
              class="_base_20bab7 _four_20bab7 circuit-4"
              id=":rd:"
            >
              Side panel title
            </h2>
            <button
              class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-5"
              title="Close"
              type="button"
            >
              <span
                class="_base_2b3edd _byte_2b3edd _spinner_892426"
              >
                <span
                  class="_hide-visually_73b4bb"
                />
              </span>
              <span
                class="_content_892426"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_hide-visually_73b4bb"
                >
                  Close
                </span>
              </span>
            </button>
          </div>
          <div
            class="circuit-6"
          >
            <p
              data-testid="children"
            >
              Side panel content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
